FEAT: Added docs for API. Updated first controllers
